--- a/logview.properties
+++ b/logview.properties
@@ -1,2 +1,5 @@
 ui.columns = time, pid, priority, tag, message
 ui.tooltip_max_width = 220
+adb.commandline = adb logcat -v threadtime
+adb.bufferswitch = -b
+adb.buffers = main, system, radio, events
