--- a/logview.properties
+++ b/logview.properties
@@ -2,4 +2,4 @@ ui.columns = time, pid, priority, tag, message
 ui.tooltip_max_width = 220
 adb.commandline = adb logcat -v threadtime
 adb.bufferswitch = -b
-adb.buffers = main, system, radio, events
+adb.buffers = events
