Autoscroll only in the end

--- a/logview.properties
+++ b/logview.properties
@@ -1,5 +1,6 @@
 ui.columns = time, pid, priority, tag, message
 ui.tooltip_max_width = 220
+ui.autoscroll_threshold = 20
 adb.commandline = adb logcat -v threadtime
 adb.bufferswitch = -b
-adb.buffers = events
+adb.buffers = system, main
