--- a/logview.properties
+++ b/logview.properties
@@ -1,6 +1,14 @@
 ui.columns = time, pid, priority, tag, message
 ui.tooltip_max_width = 220
 ui.autoscroll_threshold = 20
+
+ui.priority_color.verbose = #000000
+ui.priority_color.debug = #0000DD
+ui.priority_color.info = #228B22
+ui.priority_color.warn = #FF681F
+ui.priority_color.error = #FF0000
+ui.priority_color.fatal = #FF0000
+
 adb.commandline = adb logcat -v threadtime
 adb.bufferswitch = -b
 adb.buffers = system, main
