--- a/logview.properties
+++ b/logview.properties
@@ -8,6 +8,8 @@ ui.priority_color.info = #228B22
 ui.priority_color.warn = #FF681F
 ui.priority_color.error = #FF0000
 ui.priority_color.fatal = #FF0000
+ui.highlight_color = #D0F0C0
+ui.background_color = #FFFFFF
 
 adb.commandline = adb logcat -v threadtime
 adb.bufferswitch = -b
