Reading file dumps

--- a/logview.properties
+++ b/logview.properties
@@ -14,3 +14,5 @@ ui.background_color = #FFFFFF
 adb.commandline = adb logcat -v threadtime
 adb.bufferswitch = -b
 adb.buffers = system, main
+
+dump.buffers = main
