Integrating apache log4j library

--- a/logview.properties
+++ b/logview.properties
@@ -16,3 +16,8 @@ adb.bufferswitch = -b
 adb.buffers = system, main
 
 dump.buffers = main
+
+log4j.rootLogger = DEBUG, DebugLog
+log4j.appender.DebugLog = org.apache.log4j.ConsoleAppender
+log4j.appender.DebugLog.layout = org.apache.log4j.PatternLayout
+log4j.appender.DebugLog.layout.ConversionPattern = %d [%t] %-5p %c - %m%n
