--- a/logview.properties
+++ b/logview.properties
@@ -21,3 +21,4 @@ log4j.rootLogger = DEBUG, DebugLog
 log4j.appender.DebugLog = org.apache.log4j.ConsoleAppender
 log4j.appender.DebugLog.layout = org.apache.log4j.PatternLayout
 log4j.appender.DebugLog.layout.ConversionPattern = %d [%t] %-5p %c - %m%n
+log4j.appender.DebugLog.target=System.err
