--- a/resources/logview.properties
+++ b/resources/logview.properties
@@ -13,9 +13,9 @@ ui.background_color = #FFFFFF
 
 adb.commandline = adb logcat -v threadtime
 adb.bufferswitch = -b
-adb.buffers = system, main
+adb.buffers = system, main, events, radio
 
-dump.buffers = main
+dump.buffers = main, event, radio
 
 log4j.rootLogger = DEBUG, DebugLog
 log4j.appender.DebugLog = org.apache.log4j.ConsoleAppender
