Draft version of the ADB ddmlib integration

--- a/resources/logview.properties
+++ b/resources/logview.properties
@@ -10,15 +10,25 @@ ui.priority_color.error = #FF0000
 ui.priority_color.fatal = #FF0000
 ui.highlight_color = #D0F0C0
 ui.background_color = #FFFFFF
+ui.buffers = MAIN, SYSTEM 
 
-adb.commandline = adb logcat -v threadtime
+adb.commandline = logcat -v threadtime
 adb.bufferswitch = -b
-adb.buffers = system, main, events, radio
+adb.buffers = SYSTEM, MAIN, EVENTS, RADIO
+adb.buffer.MAIN = main
+adb.buffer.SYSTEM = system
+adb.buffer.EVENTS = events
+adb.buffer.RADIO = radio
 
-dump.buffers = main, event, radio
+
+dump.buffer.MAIN = MAIN
+dump.buffer.EVENTS = EVENT
+dump.buffer.RADIO = RADIO
 
 log4j.rootLogger = DEBUG, DebugLog
-log4j.appender.DebugLog = org.apache.log4j.ConsoleAppender
+log4j.appender.DebugLog = org.apache.log4j.FileAppender
+log4j.appender.DebugLog.file = logview.log
 log4j.appender.DebugLog.layout = org.apache.log4j.PatternLayout
 log4j.appender.DebugLog.layout.ConversionPattern = %d [%t] %-5p %c - %m%n
-log4j.appender.DebugLog.target=System.err
+log4j.appender.DebugLog.Append = false
+#log4j.appender.DebugLog.target=System.err
