--- a/resources/logview.properties
+++ b/resources/logview.properties
@@ -24,10 +24,9 @@ dump.buffer.MAIN = MAIN
 dump.buffer.EVENTS = EVENT
 dump.buffer.RADIO = RADIO
 
-log4j.rootLogger = DEBUG, DebugLog
+log4j.rootLogger = WARN, DebugLog
 log4j.appender.DebugLog = org.apache.log4j.FileAppender
-log4j.appender.DebugLog.file = logview.log
+log4j.appender.DebugLog.file = ${java.io.tmpdir}/logview.log
 log4j.appender.DebugLog.layout = org.apache.log4j.PatternLayout
 log4j.appender.DebugLog.layout.ConversionPattern = %d [%t] %-5p %c - %m%n
 log4j.appender.DebugLog.Append = false
-#log4j.appender.DebugLog.target=System.err
