Simple log stream parser

--- a/resources/logview.properties
+++ b/resources/logview.properties
@@ -10,7 +10,7 @@ ui.priority_color.error = #FF0000
 ui.priority_color.fatal = #FF0000
 ui.highlight_color = #D0F0C0
 ui.background_color = #FFFFFF
-ui.buffers = MAIN, SYSTEM 
+ui.buffers = MAIN, SYSTEM, UNKNOWN 
 
 adb.commandline = logcat -v threadtime
 adb.bufferswitch = -b
