[0.14][*] Select highlight color

--- a/resources/logview.properties
+++ b/resources/logview.properties
@@ -8,7 +8,10 @@ ui.priority_color.info = #228B22
 ui.priority_color.warn = #FF681F
 ui.priority_color.error = #FF0000
 ui.priority_color.fatal = #FF0000
-ui.highlight_color = #D0F0C0
+ui.highlight_color.0 = #D0F0C0
+ui.highlight_color.1 = #C7C2FC
+ui.highlight_color.2 = #FECBC0
+ui.highlight_color.3 = #FCFC96
 ui.background_color = #FFFFFF
 ui.buffers = MAIN, SYSTEM, UNKNOWN 
 
