--- a/resources/logview.properties
+++ b/resources/logview.properties
@@ -27,7 +27,7 @@ dump.buffer.MAIN = MAIN
 dump.buffer.EVENTS = EVENT
 dump.buffer.RADIO = RADIO
 
-log4j.rootLogger = WARN, DebugLog
+log4j.rootLogger = INFO, DebugLog
 log4j.appender.DebugLog = org.apache.log4j.FileAppender
 log4j.appender.DebugLog.file = ${java.io.tmpdir}/logview.log
 log4j.appender.DebugLog.layout = org.apache.log4j.PatternLayout
