--- a/resources/logview.properties
+++ b/resources/logview.properties
@@ -8,11 +8,16 @@ ui.priority_color.info = #228B22
 ui.priority_color.warn = #FF681F
 ui.priority_color.error = #FF0000
 ui.priority_color.fatal = #FF0000
+
 ui.highlight_color.0 = #D0F0C0
 ui.highlight_color.1 = #C7C2FC
 ui.highlight_color.2 = #FECBC0
 ui.highlight_color.3 = #FCFC96
 ui.background_color = #FFFFFF
+
+ui.bookmark_background = #01146D
+ui.bookmark_foreground = #F4EE00
+
 ui.buffers = MAIN, SYSTEM, UNKNOWN 
 
 adb.commandline = logcat -v threadtime
