Parser for logcat output

--- a/resources/logview.properties
+++ b/resources/logview.properties
@@ -29,6 +29,7 @@ adb.buffer.RADIO = radio
 
 
 dump.buffer.MAIN = MAIN
+dump.buffer.SYSTEM = SYSTEM
 dump.buffer.EVENTS = EVENT
 dump.buffer.RADIO = RADIO
 
