Start adb daemon if it is not running (fixes #37)

--- a/resources/logview.properties
+++ b/resources/logview.properties
@@ -20,6 +20,7 @@ ui.bookmark_foreground = #F4EE00
 
 ui.buffers = MAIN, SYSTEM, UNKNOWN 
 
+adb.executable = adb
 adb.commandline = logcat -v threadtime
 adb.bufferswitch = -b
 adb.buffer.MAIN = main
