--- a/build.xml
+++ b/build.xml
@@ -17,6 +17,7 @@
         <pathelement path="lib/commons-lang3-3.0.jar" />
         <pathelement path="lib/log4j-1.2.16.jar" />
         <pathelement path="lib/ddmlib.jar" />
+    	<pathelement path="lib/commons-collections-3.2.1.jar" />
     </path>
 
     <target name="all" depends="make-dist" />
@@ -78,5 +79,7 @@
 
     <target name="clean">
         <delete dir="${out-dir}" />
+    	<delete file="logview.jar" />
+    	<delete file="logview.zip" />
     </target>
 </project>
