Updated clean target in the buildfile

--- a/build.xml
+++ b/build.xml
@@ -79,5 +79,7 @@
 
     <target name="clean">
         <delete dir="${out-dir}" />
+    	<delete file="logview.jar" />
+    	<delete file="logview.zip" />
     </target>
 </project>
